# subgate

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: bootstrap.py  config.py  events.py  main.py  startup_service.py
backend/backend/auth/adapters/: apikey_router.py  auth_user_router.py  fastapi_user_routers.py  schemas.py
backend/backend/auth/application/: apikey_service.py  auth_closure_factory.py  auth_usecases.py
backend/backend/shared/: base_models.py  context.py  database.py  enums.py  eventbus.py  events.py  exceptions.py  item_maanger.py  permission_service.py  utils.py
backend/tests/: conftest.py  fake_data.py  fakes.py  helpers.py  pytest.ini
backend/tests/test_auth/: test_apikey_api.py  test_apikey_authentication.py  test_auth_api.py  test_auth_closure.py  test_fastapi_users.py  test_performance.py
backend/tests/test_concurrency/: test_concurrency_with_plan.py  test_concurrency_with_subscription.py
backend/tests/test_eventable/: test_constructor.py  test_eventable_set.py  test_private_property.py  test_property.py  test_tracks.py
backend/tests/test_plan/: test_plan_api.py  test_plan_domain.py
backend/tests/test_subscription/: test_subscription_api.py  test_subscription_domain.py  test_subscription_manager.py  test_subscription_repo.py  test_subscription_service.py
backend/tests/test_uow/: test_uow.py  test_uow_with_plan_repo.py  test_uow_with_sub_repo.py  test_uow_with_webhook_repo.py
backend/tests/test_webhook/: test_delivery_task_domain.py  test_telegraph.py  test_webhook_api.py
(+263 files in other folders)
