[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["barmatey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
fastapi = "^0.115.6"
motor = "^3.6.0"
async-pymongo = "^0.1.11"
uvicorn = "^0.32.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "<0.28.0"
aiohttp = "^3.11.9"
loguru = "^0.7.2"
fief-client = "^0.20.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
makefun = "^1.15.6"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
