[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["barmatey"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.11.9"
asyncpg = "^0.30.0"
async-pymongo = "^0.1.11"
fastapi = "^0.115.6"
fief-client = "^0.20.0"
httpx = "<0.28.0"
loguru = "^0.7.2"
makefun = "^1.15.6"
motor = "^3.6.0"
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
uvicorn = "^0.32.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
